--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@
 
 # production
 /build
+.env
+yarn.lock
 
 # misc
 .DS_Store
@@ -17,6 +19,10 @@
 .env.development.local
 .env.test.local
 .env.production.local
+
+/.firebase/
+/.firebaserc
+/firebase.json
 
 npm-debug.log*
 yarn-debug.log*
